[gd_scene load_steps=16 format=3 uid="uid://707nifbcq1se"]

[ext_resource type="Script" path="res://Scripts/Player/MainCharacter.gd" id="1_r8p80"]
[ext_resource type="Texture2D" uid="uid://dlvfmnbgjoe8s" path="res://PlayerSprites/Red.png" id="2_sh4ye"]
[ext_resource type="PackedScene" uid="uid://34xykjf8kqp0" path="res://Scenes/bite.tscn" id="3_t7bg2"]
[ext_resource type="Script" path="res://Scripts/Player/BiteAttack.gd" id="4_6qbqx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8a3dv"]
atlas = ExtResource("2_sh4ye")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3rrc"]
atlas = ExtResource("2_sh4ye")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg2qp"]
atlas = ExtResource("2_sh4ye")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu0gx"]
atlas = ExtResource("2_sh4ye")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wou"]
atlas = ExtResource("2_sh4ye")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyykj"]
atlas = ExtResource("2_sh4ye")
region = Rect2(160, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m1y7"]
atlas = ExtResource("2_sh4ye")
region = Rect2(192, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldcoy"]
atlas = ExtResource("2_sh4ye")
region = Rect2(224, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsr2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a3dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3rrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg2qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu0gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyykj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m1y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldcoy")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6fv7n"]
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_muff6"]
radius = 8.39999
height = 28.5714

[node name="MainCharacter" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_r8p80")

[node name="MainCharacterAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -1)
scale = Vector2(1.96875, 1.875)
sprite_frames = SubResource("SpriteFrames_gsr2u")
animation = &"move"
frame = 3
frame_progress = 0.478638

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 17
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6fv7n")
debug_color = Color(0.756863, 0.45098, 0.0862745, 0.419608)

[node name="PlayerHurtBox" type="Area2D" parent="."]
scale = Vector2(1.96875, 1.875)
collision_layer = 2
collision_mask = 12
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
light_mask = 2
visibility_layer = 13
rotation = 1.5708
scale = Vector2(0.507937, 0.533333)
shape = SubResource("CapsuleShape2D_muff6")

[node name="BiteAttack" parent="." instance=ExtResource("3_t7bg2")]
position = Vector2(29, 0)
collision_layer = 32
collision_mask = 4
script = ExtResource("4_6qbqx")

[node name="CooldownTimer" type="Timer" parent="BiteAttack"]
one_shot = true

[node name="CosmeticTimer" type="Timer" parent="BiteAttack"]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="BiteAttack/CooldownTimer" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="BiteAttack/CosmeticTimer" to="." method="_on_cosmetic_timer_timeout"]
